--- a/package.json
+++ b/package.json
@@ -32,7 +32,25 @@
       "zod": "^3.23.8",
       "zustand": "^4.5.2"
     },
-    "devDependencies": {
+    "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:a11y": "playwright test --project=a11y",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "devDependencies": {
       "@axe-core/playwright": "^4.10.2",
       "@eslint/js": "^9.36.0",
       "@playwright/test": "^1.56.0",
