Add encryption system and database schema docs
Implements AES-256-GCM encryption utilities, Zustand encryption store, and UI indicator components. Adds comprehensive RxDB schema definitions and validation with Zod, including detailed documentation for all collections and encrypted fields. Updates database initialization to support passphrase-based and auto-generated encryption keys.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,24 @@
             "vite/client",
             "@testing-library/jest-dom",
             "vitest/globals"
-        ]
+        ],
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"],
+            "@/types": ["src/types"],
+            "@/db": ["src/db"],
+            "@/stores": ["src/stores"],
+            "@/components": ["src/components"],
+            "@/hooks": ["src/hooks"],
+            "@/utils": ["src/utils"],
+            "@/test": ["src/test"]
+        }
     },
     "include": [
         "src",
