Refactor and enhance type safety, explanations, and UI feedback
Refactored RxDB collection methods to use explicit RxDocument and RxCollection types for improved type safety. Updated eligibility rule evaluation and explanation logic for better clarity, modularity, and nullish coalescing. Enhanced React database usage examples to provide user feedback (success/error messages) instead of alerts, improved type annotations, and ensured proper async handling. Adjusted questionnaire UI and flow to use stricter types and silent autosave. Updated debug utilities and tests to remove unnecessary async usage and improve property access safety. Added a separate ESLint config for E2E tests and introduced a dedicated tsconfig.e2e.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,9 @@
     "references": [
         {
             "path": "./tsconfig.node.json"
+        },
+        {
+            "path": "./tsconfig.e2e.json"
         }
     ]
 }
