--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@types/react-router-dom": "^5.3.3",
+        "crypto-js": "^4.2.0",
         "dexie": "^3.2.7",
         "dom-to-svg": "^0.12.2",
         "elkjs": "^0.9.0",
         "html-to-image": "^1.11.11",
         "immer": "^10.0.2",
         "isomorphic-dompurify": "^2.28.0",
+        "json-logic-js": "^2.0.5",
         "nanoid": "^5.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -50,7 +52,8 @@
         "test:e2e:report": "playwright show-report",
         "test:a11y": "playwright test --project=a11y",
         "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
+        "lint:fix": "eslint . --fix",
+        "validate-rules": "tsx scripts/validate-rules.ts"
     },
     "devDependencies": {
         "@axe-core/playwright": "^4.10.2",
@@ -59,6 +62,7 @@
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
+        "@types/json-logic-js": "^2.0.7",
         "@types/node": "^20.12.7",
         "@types/react": "^18.2.21",
         "@types/react-dom": "^18.2.7",
@@ -75,9 +79,11 @@
         "eslint-plugin-sonarjs": "^3.0.5",
         "fake-indexeddb": "^6.2.2",
         "globals": "^16.4.0",
+        "happy-dom": "^20.0.0",
         "jsdom": "^27.0.0",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.3",
+        "tsx": "^4.7.1",
         "typescript": "^5.4.5",
         "vite": "^5.2.0",
         "vitest": "^1.4.0"
