--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "private": true,
     "type": "module",
     "dependencies": {
-        "@argdown/core": "^1.7.5",
         "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-checkbox": "^1.3.3",
@@ -39,6 +38,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "build:analyze": "vite build --config vite.config.performance.ts",
         "preview": "vite preview",
         "test": "vitest",
         "test:ui": "vitest --ui",
@@ -51,6 +51,7 @@
         "test:e2e:debug": "playwright test --debug",
         "test:e2e:report": "playwright show-report",
         "test:a11y": "playwright test --project=a11y",
+        "test:perf": "tsx scripts/performance-tests.ts",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "validate-rules": "tsx scripts/validate-rules.ts"
@@ -82,10 +83,13 @@
         "happy-dom": "^20.0.0",
         "jsdom": "^27.0.0",
         "postcss": "^8.4.35",
+        "rollup-plugin-visualizer": "^5.12.0",
         "tailwindcss": "^3.4.3",
         "tsx": "^4.7.1",
         "typescript": "^5.4.5",
-        "vite": "^5.2.0",
-        "vitest": "^1.4.0"
+        "vite": "^7.1.9",
+        "vite-plugin-compression": "^0.5.1",
+        "vitest": "^3.2.4",
+        "workbox-window": "^7.0.0"
     }
 }
