Refactor performance scripts and update config handling
Refactored performance test scripts to use synchronous functions and improved type safety. Updated ESLint config to apply Node TypeScript settings to config files and expanded tsconfig.node.json includes for additional config files. Minor Playwright E2E test improvements for code clarity and security linting.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,6 +7,14 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts", "vitest.config.ts", "playwright.config.ts", "scripts/**/*.ts"]
+  "include": [
+    "vite.config.ts",
+    "vite.config.performance.ts",
+    "vitest.config.ts",
+    "playwright.config.ts",
+    "playwright.config.lowend.ts",
+    "tailwind.config.ts",
+    "scripts/**/*.ts"
+  ]
 }
 
