Update repo links, enable CodeQL, add license, update ignore
Replaced placeholder GitHub URLs with the correct repository links in CONTRIBUTING.md and README.md. Enabled CodeQL workflow triggers and removed disabled workflow comments. Expanded .gitignore to cover sensitive data, OS, IDE, and backup files. Added MIT LICENSE file. Set package.json 'private' to false to allow publishing.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,30 @@ coverage/
 # Temporary files
 *.tmp
 .cache/
+
+# Sensitive data
+*.key
+*.pem
+*.p12
+*.pfx
+secrets/
+credentials/
+config/secrets.json
+.env.production
+.env.staging
+
+# OS specific
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE specific
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.backup
