--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "benefit-finder",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "type": "module",
     "dependencies": {
         "@radix-ui/react-accordion": "^1.2.12",
