--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,15 @@ name: CI
 
 on:
   push:
-    branches: [main, master, develop]
+    branches: [master]
   pull_request:
-    branches: [main, master, develop]
+    branches: [master]
 
 jobs:
-  lint:
-    name: Lint
+  quality-checks:
+    name: Quality Checks
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: Checkout code
@@ -18,129 +19,45 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npm run lint -- --max-warnings 0
+      - name: Lint
+        run: npm run lint
 
-      - name: Check TypeScript
+      - name: Type Check
         run: npx tsc --noEmit
 
-  unit-tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
+      - name: Validate Rules
+        run: npm run validate-rules
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run unit tests
+      - name: Unit Tests
         run: npm run test:run
 
-      - name: Generate coverage report
-        run: npm run test:coverage
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage/lcov.info
-          fail_ci_if_error: false
+      - name: E2E Tests
+        run: npm run test:e2e
 
-      - name: Upload coverage artifact
+      - name: Accessibility Tests
+        run: npm run test:a11y
+
+      - name: Upload Playwright Report
+        if: failure()
         uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: coverage-report
-          path: coverage/
-          retention-days: 30
-
-  e2e-tests:
-    name: E2E Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium firefox
-
-      - name: Run E2E tests
-        run: npm run test:e2e -- --project=chromium --project=firefox
-
-      - name: Upload Playwright report
-        uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-results
-          path: test-results/
-          retention-days: 30
-
-  accessibility-tests:
-    name: Accessibility Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium
-
-      - name: Run accessibility tests
-        run: npm run test:a11y
-
-      - name: Upload accessibility report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: accessibility-report
-          path: playwright-report/
-          retention-days: 30
+          retention-days: 7
 
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint, unit-tests]
+    timeout-minutes: 15
 
     steps:
       - name: Checkout code
@@ -149,13 +66,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build project
+      - name: Build
         run: npm run build
 
       - name: Upload build artifacts
@@ -164,25 +81,3 @@ jobs:
           name: dist
           path: dist/
           retention-days: 7
-
-  security-audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Run npm audit
-        run: npm audit --audit-level=high
-        continue-on-error: true
-
-      - name: Check for vulnerable dependencies
-        run: npm audit --production --audit-level=moderate
-
