--- a/package.json
+++ b/package.json
@@ -1,95 +1,104 @@
 {
-    "name": "benefit-finder",
-    "version": "0.1.0",
-    "private": false,
-    "type": "module",
-    "dependencies": {
-        "@radix-ui/react-accordion": "^1.2.12",
-        "@radix-ui/react-alert-dialog": "^1.1.15",
-        "@radix-ui/react-checkbox": "^1.3.3",
-        "@radix-ui/react-dialog": "^1.1.15",
-        "@radix-ui/react-dropdown-menu": "^2.1.16",
-        "@radix-ui/react-label": "^2.1.7",
-        "@radix-ui/react-popover": "^1.0.7",
-        "@radix-ui/react-progress": "^1.1.7",
-        "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-slider": "^1.3.6",
-        "@radix-ui/react-switch": "^1.2.6",
-        "@radix-ui/react-tabs": "^1.1.13",
-        "@radix-ui/react-tooltip": "^1.2.8",
-        "@types/react-router-dom": "^5.3.3",
-        "crypto-js": "^4.2.0",
-        "dexie": "^3.2.7",
-        "dom-to-svg": "^0.12.2",
-        "elkjs": "^0.9.0",
-        "html-to-image": "^1.11.11",
-        "immer": "^10.0.2",
-        "isomorphic-dompurify": "^2.28.0",
-        "json-logic-js": "^2.0.5",
-        "nanoid": "^5.0.7",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^7.9.3",
-        "reactflow": "^11.10.3",
-        "rxdb": "^16.19.1",
-        "zod": "^3.23.8",
-        "zustand": "^4.5.2"
-    },
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "build:analyze": "vite build --config vite.config.performance.ts",
-        "preview": "vite preview",
-        "test": "vitest",
-        "test:ui": "vitest --ui",
-        "test:run": "vitest run",
-        "test:coverage": "vitest run --coverage",
-        "test:watch": "vitest watch",
-        "test:e2e": "playwright test",
-        "test:e2e:ui": "playwright test --ui",
-        "test:e2e:headed": "playwright test --headed",
-        "test:e2e:debug": "playwright test --debug",
-        "test:e2e:report": "playwright show-report",
-        "test:a11y": "playwright test --project=a11y",
-        "test:perf": "tsx scripts/performance-tests.ts",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix",
-        "validate-rules": "tsx scripts/validate-rules.ts"
-    },
-    "devDependencies": {
-        "@axe-core/playwright": "^4.10.2",
-        "@eslint/js": "^9.36.0",
-        "@playwright/test": "^1.56.0",
-        "@testing-library/jest-dom": "^6.9.1",
-        "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^14.6.1",
-        "@types/json-logic-js": "^2.0.7",
-        "@types/node": "^20.12.7",
-        "@types/react": "^18.2.21",
-        "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^8.45.0",
-        "@typescript-eslint/parser": "^8.45.0",
-        "@vitejs/plugin-react-swc": "^3.6.0",
-        "autoprefixer": "^10.4.18",
-        "axe-core": "^4.10.3",
-        "eslint": "^9.36.0",
-        "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^6.1.0",
-        "eslint-plugin-react-refresh": "^0.4.23",
-        "eslint-plugin-security": "^3.0.1",
-        "eslint-plugin-sonarjs": "^3.0.5",
-        "fake-indexeddb": "^6.2.2",
-        "globals": "^16.4.0",
-        "happy-dom": "^20.0.0",
-        "jsdom": "^27.0.0",
-        "postcss": "^8.4.35",
-        "rollup-plugin-visualizer": "^5.12.0",
-        "tailwindcss": "^3.4.3",
-        "tsx": "^4.7.1",
-        "typescript": "^5.4.5",
-        "vite": "^7.1.9",
-        "vite-plugin-compression": "^0.5.1",
-        "vitest": "^3.2.4",
-        "workbox-window": "^7.0.0"
-    }
+  "name": "benefit-finder",
+  "version": "0.1.0",
+  "private": false,
+  "type": "module",
+  "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/react-router-dom": "^5.3.3",
+    "crypto-js": "^4.2.0",
+    "dexie": "^3.2.7",
+    "dom-to-svg": "^0.12.2",
+    "elkjs": "^0.9.0",
+    "html-to-image": "^1.11.11",
+    "immer": "^10.0.2",
+    "isomorphic-dompurify": "^2.28.0",
+    "json-logic-js": "^2.0.5",
+    "nanoid": "^5.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.3",
+    "reactflow": "^11.10.3",
+    "rxdb": "^16.19.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
+  },
+  "scripts": {
+    "prepare": "husky",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "build:analyze": "vite build --config vite.config.performance.ts",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:a11y": "playwright test --project=a11y",
+    "test:perf": "tsx scripts/performance-tests.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "validate-rules": "tsx scripts/validate-rules.ts"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "vitest related --run --passWithNoTests"
+    ]
+  },
+  "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
+    "@eslint/js": "^9.36.0",
+    "@playwright/test": "^1.56.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/json-logic-js": "^2.0.7",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.18",
+    "axe-core": "^4.10.3",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.0",
+    "eslint-plugin-react-refresh": "^0.4.23",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "fake-indexeddb": "^6.2.2",
+    "globals": "^16.4.0",
+    "happy-dom": "^20.0.0",
+    "husky": "^9.1.7",
+    "jsdom": "^27.0.0",
+    "lint-staged": "^16.2.4",
+    "postcss": "^8.4.35",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "tailwindcss": "^3.4.3",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.5",
+    "vite": "^7.1.9",
+    "vite-plugin-compression": "^0.5.1",
+    "vitest": "^3.2.4",
+    "workbox-window": "^7.0.0"
+  }
 }
