--- a/package.json
+++ b/package.json
@@ -41,17 +41,21 @@
     "build": "tsc && vite build",
     "build:analyze": "vite build --config vite.config.performance.ts",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest watch",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed",
-    "test:e2e:debug": "playwright test --debug",
-    "test:e2e:report": "playwright show-report",
-    "test:a11y": "playwright test --project=a11y",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:run": "vitest run",
+        "test:related": "vitest run --related",
+        "test:smart": "node scripts/test-related.js",
+        "test:coverage": "vitest run --coverage",
+        "test:watch": "vitest watch",
+        "test:e2e": "playwright test",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:headed": "playwright test --headed",
+        "test:e2e:debug": "playwright test --debug",
+        "test:e2e:report": "playwright show-report",
+        "test:e2e:core": "playwright test --project=chromium --grep=\"should load successfully|should display main content\"",
+        "test:e2e:changed": "playwright test",
+        "test:a11y": "playwright test --project=a11y",
     "test:perf": "tsx scripts/performance-tests.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -59,13 +63,14 @@
   },
     "lint-staged": {
         "*.{ts,tsx}": [
-            "eslint --fix"
-        ],
-        "*.{ts,tsx}": [
+            "eslint --fix",
             "vitest related --run --passWithNoTests"
         ],
         "src/rules/**/*.json": [
             "npm run validate-rules"
+        ],
+        "tests/e2e/**/*.e2e.{ts,tsx}": [
+            "npm run test:e2e -- --grep=\"$(basename {file} .e2e.ts)\""
         ]
     },
   "devDependencies": {
