Refactor debug logging and rule evaluation helpers
Centralizes and enhances debug logging in useEligibilityEvaluation.ts and database.ts by introducing dedicated helper functions for debug output, rule evaluation, and calculation details. Improves maintainability and reduces cognitive complexity by removing inline debug statements. Updates SNAP rule logic checks for clarity and safety. Minor npm script update to disable eslint cache.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "test:e2e:changed": "playwright test",
         "test:a11y": "playwright test --project=a11y",
     "test:perf": "tsx scripts/performance-tests.ts",
-    "lint": "eslint .",
+    "lint": "eslint . --no-cache",
     "lint:fix": "eslint . --fix",
     "validate-rules": "tsx scripts/validate-rules.ts"
   },
