--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,11 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: E2E Tests
-        run: npm run test:e2e
+      - name: E2E Tests (Chromium Only)
+        run: npm run test:e2e -- --project=chromium
+
+      - name: Cross-Browser Smoke Tests
+        run: npm run test:e2e:core
 
       - name: Accessibility Tests
         run: npm run test:a11y
