Add new Playwright E2E test scripts for mobile and tablet
Introduces npm scripts for running Playwright end-to-end tests on mobile Chrome, mobile Safari, tablet, and accessibility projects. Also removes the redundant 'test:a11y' script.

--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
     "test:e2e:chromium": "playwright test --project=chromium",
     "test:e2e:firefox": "playwright test --project=firefox",
     "test:e2e:webkit": "playwright test --project=webkit",
+    "test:e2e:mobile-chrome": "playwright test --project=mobile-chrome",
+    "test:e2e:mobile-safari": "playwright test --project=mobile-safari",
+    "test:e2e:tablet": "playwright test --project=tablet",
+    "test:e2e:a11y": "playwright test --project=a11y",
     "test:e2e:changed": "playwright test",
-    "test:a11y": "playwright test --project=a11y",
     "test:perf": "tsx scripts/performance-tests.ts",
     "lint": "eslint . --no-cache",
     "lint:fix": "eslint . --fix",
