--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.1.7",
@@ -23,12 +24,15 @@
     "dom-to-svg": "^0.12.2",
     "elkjs": "^0.9.0",
     "html-to-image": "^1.11.11",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "immer": "^10.0.2",
     "isomorphic-dompurify": "^2.28.0",
     "json-logic-js": "^2.0.5",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.1.2",
     "react-router-dom": "^7.9.3",
     "reactflow": "^11.10.3",
     "rxdb": "^16.19.1",
