Add program-specific explanation modals for results
Introduces dedicated explanation components for WIC, Medicaid, and SNAP eligibility results, providing tailored, user-friendly guidance for each program. Updates ProgramCard to use these new components, adds supporting documentation on modal structure, and includes a WIC integration test. Also reorganizes rule files under 'rules/packages' and updates references accordingly.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,7 +14,8 @@
     "playwright.config.ts",
     "playwright.config.lowend.ts",
     "tailwind.config.ts",
-    "scripts/**/*.ts"
+    "scripts/**/*.ts",
+    "src/**/*.ts"
   ]
 }
 
