Refactor eligibility logic and improve test utilities
Refactored core eligibility and criteria formatting logic for improved clarity and type safety, including enhanced SNAP and comparison handling. Updated i18n feedback manager to use synchronous localStorage access. Improved PrivacyExplainer database handling and button operations in e2e tests for reliability. Removed unused Vite env type file and updated build script in package.json.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "prepare": "husky",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build:analyze": "vite build --config vite.config.performance.ts",
     "preview": "vite preview",
     "test": "vitest",
