--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "test:e2e:a11y": "playwright test --project=a11y",
     "test:e2e:changed": "playwright test",
     "test:perf": "tsx scripts/performance-tests.ts",
+    "kill-dev": "powershell -Command \"Get-NetTCPConnection -LocalPort 5173,5174,5175,5176,5177,5178,5179 -State Listen -ErrorAction SilentlyContinue | ForEach-Object { taskkill /F /PID $_.OwningProcess }\"",
     "lint": "eslint . --no-cache",
     "lint:fix": "eslint . --fix",
     "validate-rules": "tsx scripts/validate-rules.ts"
