--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.18",
     "axe-core": "^4.10.3",
