--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "test:run": "vitest run",
     "test:related": "vitest related --run",
     "test:smart": "node scripts/test-related.js",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=12288\" vitest run --coverage",
     "test:watch": "vitest watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
@@ -101,6 +101,7 @@
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.18",
     "axe-core": "^4.10.3",
+    "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.1.0",
