Improve test stability and memory usage in test suite
Updated test mocks in App.test.tsx to use real translation strings and avoid real database operations, improving reliability and clarity of assertions. Enhanced environment detection in database.ts to prevent dev mode plugin from running in test environments, reducing RxDB iframe issues. Adjusted test setup to set environment variables and suppress unnecessary warnings. Increased memory limits and enforced sequential test execution in vitest.config.ts for better memory management during coverage runs.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "test:run": "vitest run",
     "test:related": "vitest related --run",
     "test:smart": "node scripts/test-related.js",
-    "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=12288\" vitest run --coverage",
+    "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=32768 --max-semi-space-size=256\" vitest run --coverage",
     "test:watch": "vitest watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
