Refactor i18n init, improve chunking, and update SNAP dialog
Refactors i18n initialization for better error handling and fallback, and exports the i18n instance explicitly. Updates advanced chunking logic to consolidate Radix UI and database modules, and ensures all i18n modules are bundled together. Disables custom manual chunking in Vite config to avoid module loading issues, letting Vite handle chunking automatically. Improves the SNAP explanation dialog to use Dialog primitives for accessibility and structure. Updates test mocks and minor code style fixes for consistency.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "test:e2e:changed": "playwright test",
     "test:perf": "tsx scripts/performance-tests.ts",
     "kill-dev": "powershell -Command \"Get-NetTCPConnection -LocalPort 5173,5174,5175,5176,5177,5178,5179 -State Listen -ErrorAction SilentlyContinue | ForEach-Object { taskkill /F /PID $_.OwningProcess }\"",
+    "kill-preview": "powershell -Command \"Get-NetTCPConnection -LocalPort 4173,4174,4175,4176,4177,4178,4179 -State Listen -ErrorAction SilentlyContinue | ForEach-Object { taskkill /F /PID $_.OwningProcess }\"",
     "lint": "eslint . --no-cache",
     "lint:fix": "eslint . --fix",
     "validate-rules": "tsx scripts/validate-rules.ts"
