Remove unused demo components and tests, fix memory leaks
Deleted CountySelectorDemo, CountySelectorFixDemo, FormattingDemo components and their associated tests as they are not used in production. Updated Zustand store persistence to conditionally disable persist middleware in test environments to prevent memory leaks. Improved App and test setup for better async cancellation and resource cleanup. Increased Node.js heap size for tests in package.json scripts. Added documentation on memory leak fixes and test file review.

--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "build": "vite build",
     "build:analyze": "vite build --config vite.config.performance.ts",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:related": "vitest related --run",
+    "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest",
+    "test:ui": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest --ui",
+    "test:run": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest run",
+    "test:related": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest related --run",
     "test:smart": "node scripts/test-related.js",
     "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=32768 --max-semi-space-size=256\" vitest run --coverage",
-    "test:watch": "vitest watch",
+    "test:watch": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
