Increase test timeouts and add global timeout
Updated test and hook timeouts to 20 seconds in Vitest and Playwright configs. Added a 1-hour global timeout to Playwright to prevent infinite hangs. Modified npm test scripts to include a 20-second timeout for Vitest runs.

--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "build": "vite build",
     "build:analyze": "vite build --config vite.config.performance.ts",
     "preview": "vite preview",
-    "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest",
+    "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" timeout /t 20 /nobreak vitest || exit 1",
     "test:ui": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest --ui",
-    "test:run": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest run",
+    "test:run": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" timeout /t 20 /nobreak vitest run || exit 1",
     "test:related": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest related --run",
     "test:smart": "node scripts/test-related.js",
     "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=32768 --max-semi-space-size=256\" vitest run --coverage",
