--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "build": "vite build",
     "build:analyze": "vite build --config vite.config.performance.ts",
     "preview": "vite preview",
-    "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" timeout /t 20 /nobreak vitest || exit 1",
+    "test": "node scripts/test-timeout.js cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest",
     "test:ui": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest --ui",
-    "test:run": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" timeout /t 20 /nobreak vitest run || exit 1",
+    "test:run": "node scripts/test-timeout.js cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest run",
     "test:related": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest related --run",
     "test:smart": "node scripts/test-related.js",
     "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=32768 --max-semi-space-size=256\" vitest run --coverage",
     "test:watch": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" vitest watch",
+    "test:cleanup": "node scripts/kill-test-processes.js",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
