Improve collection readiness checks and update tsconfig
Refactored utility functions to enhance method availability checks for RxCollection, added detailed error reporting, and improved collection reference refreshing logic. Updated tsconfig.json to disable declaration file generation and explicitly exclude type definition files and build directories.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
+        "declaration": false,
         "jsx": "react-jsx",
         "types": [
             "vite/client",
@@ -43,9 +44,14 @@
         }
     },
     "include": [
-        "src",
         "src/**/*.ts",
         "src/**/*.tsx"
+    ],
+    "exclude": [
+        "**/*.d.ts",
+        "node_modules",
+        "dist",
+        "build"
     ],
     "references": [
         {
