--- a/tsconfig.e2e.json
+++ b/tsconfig.e2e.json
@@ -11,7 +11,8 @@
   },
   "include": [
     "tests/**/*.ts",
-    "playwright.config.ts"
+    "playwright.config.ts",
+    "playwright.config.lowend.ts"
   ]
 }
 
