Refactor ESLint config and update dependencies
Simplifies and modernizes the ESLint configuration to use flat config and updated plugin usage. Removes obsolete eslint-warnings files. Updates ESLint and related dependencies to latest versions in package.json and package-lock.json. Minor code cleanups to remove unnecessary eslint-disable comments.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    // ===== LANGUAGE & ENVIRONMENT =====
     "target": "ES2020",
     "lib": [
       "DOM",
@@ -8,8 +7,6 @@
       "ES2020"
     ],
     "jsx": "react-jsx",
-
-    // ===== MODULES =====
     "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
@@ -17,17 +14,12 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-
-    // ===== EMIT =====
     "noEmit": true,
     "declaration": false,
     "declarationMap": false,
     "incremental": false,
     "sourceMap": false,
-
-    // ===== TYPE CHECKING (Strict Mode) =====
     "strict": true,
-    // Additional strict flags not included in "strict: true"
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
@@ -38,32 +30,18 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    // Enhanced type safety (TypeScript 4.1+)
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "exactOptionalPropertyTypes": false,
-
-    // ===== COMPILER OPTIONS =====
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "allowJs": false,
-
-    // ===== PATH MAPPING =====
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@/types": ["src/types"],
-      "@/db": ["src/db"],
-      "@/stores": ["src/stores"],
-      "@/components": ["src/components"],
-      "@/hooks": ["src/hooks"],
-      "@/utils": ["src/utils"],
-      "@/test": ["src/test"]
+      "@/*": ["src/*"]
     },
-
-    // ===== TYPE DECLARATIONS =====
     "types": [
       "vite/client",
       "@testing-library/jest-dom",
@@ -71,12 +49,11 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*",
+    "*.ts",
+    "*.tsx"
   ],
   "exclude": [
-    "**/*.d.ts",
-    "src/**/*.d.ts",
     "node_modules",
     "dist",
     "build",
