--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix --max-warnings=0"
+      "eslint --fix --max-warnings=0 --no-warn-ignored"
     ],
     "src/rules/**/*.json": [
       "npm run validate-rules"
@@ -87,7 +87,7 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.56.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -104,14 +104,14 @@
     "autoprefixer": "^10.4.18",
     "axe-core": "^4.10.3",
     "cross-env": "^10.1.0",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^6.1.0",
+    "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.23",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-sonarjs": "^3.0.5",
     "fake-indexeddb": "^6.2.2",
-    "globals": "^16.4.0",
+    "globals": "^16.5.0",
     "happy-dom": "^20.0.0",
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
@@ -121,6 +121,7 @@
     "tailwindcss": "^3.4.3",
     "tsx": "^4.7.1",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.47.0",
     "vite": "^7.1.9",
     "vite-plugin-compression": "^0.5.1",
     "vitest": "^3.2.4",
