Build fix: add terser to prod deps; align workflows to master

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,9 @@ name: CodeQL Security Scan
 
 on:
   push:
-    branches: [main, master, develop]
+    branches: [master, develop]
   pull_request:
-    branches: [main, master]
+    branches: [master]
   schedule:
     # Run at 6:00 AM UTC every Monday
     - cron: '0 6 * * 1'
