--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "reactflow": "^11.10.3",
     "rxdb": "^16.19.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "terser": "^5.44.1"
   },
   "scripts": {
     "prepare": "husky",
