Refactor exports and optimize chunking for performance
Lazily load heavy export/import utilities in results and database modules to reduce main bundle size. Refactor AppNavigation to use an accessible overflow menu for onboarding actions. Improve Vite manual chunking for more granular and cache-friendly splits. Fix test mocks for i18n hooks and clean up minor code style issues.

--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.18",
     "axe-core": "^4.10.3",
+    "baseline-browser-mapping": "^2.9.11",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
